--- a/asciidoc/04_sdk_api.adoc
+++ b/asciidoc/04_sdk_api.adoc
@@ -232,6 +232,9 @@ func fetchFhirStu3Records<R: FhirStu3Resource>(of type: R.Type = R.self,
                                                page: Int = 1,
                                                from: Date? = nil,
                                                to: Date? = nil,
+                                               updatedFrom: Date? = nil,
+                                               updatedTo: Date? = nil,
+                                               includingDeleted: Bool = false,
                                                annotations: [String] = [],
                                                queue: DispatchQueue = responseQueue,
                                                completion: @escaping ResultBlock<[FhirRecord<R>]>)
